src/objects/EncuestaMKTSFDC__c.object
<CustomObject>
    <fields>
        <fullName>CorreoEncuestado__c</fullName>
        <label>Correo Encuestado</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Encuestado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Encuestado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FechaEncuesta__c</fullName>
        <label>Fecha encuesta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NoCaso__c</fullName>
        <label>No Caso</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NombreAjustador__c</fullName>
        <label>Nombre Ajustador</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NombreAsesor__c</fullName>
        <label>Nombre Asesor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumeroEncuestaMKT__c</fullName>
        <externalId>true</externalId>
        <label>Número Encuesta MKT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonaAtendio__c</fullName>
        <label>Persona que atendió</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pregunta10__c</fullName>
        <label>Pregunta 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pregunta1__c</fullName>
        <label>Pregunta 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pregunta2__c</fullName>
        <label>Pregunta 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Respuesta10__c</fullName>
        <label>Respuesta 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Respuesta1__c</fullName>
        <label>Respuesta 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Respuesta2__c</fullName>
        <label>Respuesta 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TipoEncuesta__c</fullName>
        <label>Tipo de Encuesta</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>canal__c</fullName>
        <label>canal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Encuesta MKT-SFDC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NumeroEncuestaMKT__c</columns>
        <columns>NAME</columns>
        <columns>NoCaso__c</columns>
        <columns>NombreAsesor__c</columns>
        <columns>TipoEncuesta__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>ContratacionHoy</fullName>
        <columns>NAME</columns>
        <columns>NoCaso__c</columns>
        <columns>canal__c</columns>
        <columns>TipoEncuesta__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Pregunta1__c</columns>
        <columns>Respuesta1__c</columns>
        <columns>NumeroEncuestaMKT__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CorreoEncuestado__c</columns>
        <columns>Encuestado__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TipoEncuesta__c</field>
            <operation>equals</operation>
            <value>Contratación</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Contratación Hoy</label>
        <sharedTo>
            <group>Administradores</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HoyRenovacion</fullName>
        <columns>NAME</columns>
        <columns>TipoEncuesta__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Encuestado__c</columns>
        <columns>FechaEncuesta__c</columns>
        <columns>NoCaso__c</columns>
        <columns>NombreAjustador__c</columns>
        <columns>NombreAsesor__c</columns>
        <columns>NumeroEncuestaMKT__c</columns>
        <columns>PersonaAtendio__c</columns>
        <columns>Pregunta1__c</columns>
        <columns>Respuesta1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TipoEncuesta__c</field>
            <operation>equals</operation>
            <value>Renovación</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>3/10/2018 12:00 AM</value>
        </filters>
        <label>Renovación Hoy</label>
    </listViews>
    <listViews>
        <fullName>Siniestro</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>NumeroEncuestaMKT__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TipoEncuesta__c</field>
            <operation>contains</operation>
            <value>Siniestro</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Siniestro Hoy</label>
        <sharedTo>
            <group>Administradores</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Nombre de Encuesta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Encuestas MKT-SFDC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>